samples/_failures_safe/1761256778_894930_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d7094ae0.c: In function ‘main’:
./samples/SAFE/__tmp_d7094ae0.c:162:5: error: expected expression at end of input
  162 |     kruskalMST(&
      |     ^~~~~~~~~~
./samples/SAFE/__tmp_d7094ae0.c:162:5: error: expected declaration or statement at end of input
